#pragma once

#include "./bone.hpp"

class OctahedronBone : public Bone{
public:
	OctahedronBone(float length, JointID id);
};